test/Bugs/MisspelledKeywordInRecord.err
AGDA_FAILURE

ret > ExitFailure 42
out > MisspelledKeywordInRecord.agda:4.3-11: error: [NotValidBeforeField]
out > This declaration is illegal in a record before the last field
out > when scope checking the declaration
out >   record R where
out >     indutive
out >     field A : Set
out >
